--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "sweetalert2": "^11.3.0",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.9.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
